añadida trajeta actores